--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sonner": "^2.0.7",
     "stripe": "^19.0.0",
     "tailwind-merge": "^3.3.1",
+    "ulid": "^3.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "eslint-config-next": "15.5.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "supabase": "^2.51.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
