--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-intersection-observer": "^10.0.0",
     "resend": "^6.1.3",
     "sonner": "^2.0.7",
     "stripe": "^19.0.0",
