--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "react": "19.1.0",
