--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-email/render": "^1.3.2",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
@@ -31,14 +34,14 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "^7.68.0",
     "react-intersection-observer": "^10.0.0",
     "resend": "^6.1.3",
     "sonner": "^2.0.7",
     "stripe": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "ulid": "^3.0.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
